Fix flex issue on smaller screen ands tyle buttons on welcome.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,5 @@
 /*----------------------Custom CSS */
 
-#welcome-image {
-	width: 20px;
-}
-
 #item-selection {
 	padding-bottom: 5px;
 }
